--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client": "npm start --prefix client",
     "start": "concurrently \"npm run dev\" \"npm run client\"",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Arjun Araneta",
   "license": "ISC",
@@ -35,5 +36,10 @@
     "url": "^0.11.0",
     "uuid": "^3.3.3",
     "ws": "^7.1.2"
-  }
+    
+  },
+  "engines": {            
+    "node": "12.13.1",      
+    "npm": "6.12.1"          
+    }
 }
