--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Arjun Araneta",
+  "author": "Hrachya Ashkhatoyan",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
